# consulting-chatbot

./: .env  CLAUDE.md  README.md  docker-compose.yaml  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  graph.py  main.py  pyproject.toml  requirements.txt  test_main.py  vercel.json
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/login/: page.tsx
frontend/app/plans/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: useTextToSpeech.tsx  useVoiceDictation.tsx
frontend/components/ui/: theme-toggle.tsx
